refactor: redesign the overall api